Fix layout shift between scroll/no scroll

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   logs: false;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .sidebarlink {
   @apply flex shrink-0 cursor-pointer flex-nowrap items-center justify-start gap-1.5 p-2 align-middle text-xl outline-offset-2 select-none;
 }
